# ivg-kg

./: .gitignore  AGENTS.md  FOCUS.md  MOCKUP-WALKTHROUGH.md  README.md  RUNBOOK.md  SPEC.md  STATEMENT-CHANGES.md  TASKS.md  Taskfile.yml  conftest.py  project_statement.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  app.py  callbacks.py  layout.py  run_source.py  theme.py
app/assets/: info.css
app/charts/: __init__.py  condition_breakdown.py  status_dist.py  support_frequency.py
app/panels/: __init__.py  analytics.py  answer.py  repair.py  subgraph.py
course/: COURSE-DISTILLATION.md  DELIVERABLE-RUBRICS.md  INSPIRATION-2024-25.md  MMA-MODEL.md
data/frozen/books/books-p0-v1/: content_labels.json  gold_qa.json  gold_qa.stub.json  manifest.json  manifest.stub.json  overlap_report.json  property_canon.json  question_bank.json  question_bank.stub.json  reliability_report.json  snapshot.json
data/runs/: slice-01-glass-menagerie.json  slice-02-pelevin-shared-author.json  slice-03-principles-economics.json
decisions/: 2026-06-08-multimodal-deep-research.md  2026-06-11-focus-decision-verdict.md  2026-06-12-artwork-nonredundancy-gate.md  2026-06-12-course-grounding.md  2026-06-12-mma-review-and-multimedia-novelty.md  2026-06-12-novelty-factcheck.md  2026-06-12-trust-views-verdict.md
scripts/: emit_calibration_report.py  emit_rq2_figure.py  emit_slice_runs.py  run_books_sweep.py  run_section6_controls.py  run_sweep.py
spec/: SPEC-image-artwork.md  SPEC-image-taxa.md  SPEC-text.md
src/ivg_kg/: config.py  diagnostics.py  schema.py
src/ivg_kg/data/: graph_store.py  pipeline.py  reference.py  wikidata.py
src/ivg_kg/experiment/: __init__.py  ablation.py  calibration.py  controls.py  gold_qa.py  question_bank.py  rq2_aggregate.py  sweep.py
src/ivg_kg/grounding/: backend.py  classify.py  context.py  entailment.py  extract.py  generate.py  link.py  slice.py
src/ivg_kg/grounding/clients/: __init__.py  base.py  cloud.py  factory.py  local.py  ollama.py
src/ivg_kg/mock/: fixtures.py
src/ivg_kg/perturbation/: __init__.py  base.py  image_content_absence.py  knowledge_absence.py  text_content_absence.py
tasks/: EX6a-method-notes.md  TASKS-image-artwork.md  TASKS-image-taxa.md  TASKS.md  UI6-PLAN.md
tests/: conftest.py  test_ablation_manifest_books.py  test_ai_clients.py  test_app.py  test_calibration.py  test_classify.py  test_config.py  test_config_generator.py  test_content_labels_gradability.py  test_context.py  test_entailment_gate.py  test_experiment_seams.py  test_extract.py  test_fixtures.py  test_generate.py  test_graph_store.py  test_grounding_slice.py  test_link.py  test_minicheck_scoring.py  test_perturbation.py  test_pipeline.py  test_question_bank_books.py  test_reference.py  test_rq2_aggregate.py  test_run_books_sweep.py  test_run_source.py  test_schema.py  test_section6_controls.py  test_section6_controls_harness.py  test_sweep.py  test_sweep_resume.py  test_wikidata.py
