[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ivg-kg"
version = "0.1.0"
description = "IVG-KG: Interpretable Visual Grounding via Knowledge Graphs"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.2",
    "dash-cytoscape>=1.0.2",
    "plotly>=5.24.1",
    "networkx>=3.4.2",
    "pydantic>=2.10.4",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
]

[project.optional-dependencies]
data = [
    "requests>=2.32.3",
    "SPARQLWrapper>=2.0.0",
    "WikibaseIntegrator>=0.12.9",
]
grounding = [
    # MiniCheck-7B (InternLM2) ships transformers-4.x-era remote modeling code:
    # it relies on PreTrainedModel inheriting GenerationMixin and on
    # DynamicCache.from_legacy_cache, both removed by transformers 4.50/5.x.
    # On >=4.50 the model loads but its forward produces silently-wrong
    # (non-value-sensitive) logits, so pin below 4.50 for a correct verifier.
    "transformers>=4.48.0,<4.50",
    "torch>=2.5.1",
    "einops>=0.8.0",
    "sentencepiece>=0.2.0",
]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ivg_kg"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ivg_kg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
